--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   },
   "homepage": "https://github.com/FranGarciaLopez/API_Node#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "passport": "^0.6.0",
-    "passport-jwt": "^4.0.1"
+    "passport-jwt": "^4.0.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "chai": "^4.3.7",
